# torrent-spider

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose-infra.yml  docker-compose.yml  pyproject.toml  test_publish_hash.py
hash-collector/: Dockerfile  main.py
metadata-collector/: Dockerfile  main.py  requirements.txt
shared/: __init__.py  config.py  kafka_client.py  schemas.py
storage/: Dockerfile  database.py  main.py  requirements.txt
